[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/city_drawing.jpg" type="Texture" id=3]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/ResolucionScene.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[node name="ResolucionScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 91.9971, 58.9837 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1444.0
margin_top = -425.407
margin_right = 476.002
margin_bottom = 854.593
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.0
margin_right = 278.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -228.0
margin_top = 20.0
margin_right = 229.0
margin_bottom = 398.0
custom_constants/separation = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 474.0
margin_bottom = 328.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolucionTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 474.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Resolución"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 474.0
margin_bottom = 166.0

[node name="BigButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 92.0
margin_right = 382.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "1. 1920 x 1080"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 474.0
margin_bottom = 247.0

[node name="MediumButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 104.0
margin_right = 370.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "2. 1080 x 720"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 474.0
margin_bottom = 328.0

[node name="SmallButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer3"]
margin_left = 116.0
margin_right = 358.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "3. 800 x 600"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 403.0
margin_right = 474.0
margin_bottom = 459.0

[node name="VolverAConfigButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_right = 474.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "4. Volver a configuración"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer/BigButton" to="." method="_on_BigButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer2/MediumButton" to="." method="_on_MediumButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer3/SmallButton" to="." method="_on_SmallButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VolverAConfigButton" to="." method="_on_VolverAlMenuButton_pressed"]
[connection signal="finished" from="SelectionSound" to="." method="_on_SelectionSound_finished"]
